<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/blue"
                android:elevation="10dp"
                android:outlineAmbientShadowColor="@color/purple"
                android:outlineSpotShadowColor="@color/purple"
                app:cardCornerRadius="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/listou"
                    android:textColor="@color/white"
                    android:textSize="38sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EditEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/email"
                android:textColorHint="@color/blue"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/blue"
                app:helperTextTextAppearance="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/blue"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EditPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/blue"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/blue"
                app:helperTextEnabled="false"
                app:hintTextColor="@color/blue"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/blue"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/purple"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_have_account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/BtSwitchRegisterView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/register"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/btArrowLeft"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="start"
                app:lottie_rawRes="@raw/ic_arrow_left"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:backgroundTint="@color/blue"
                app:cardCornerRadius="18dp"
                android:elevation="10dp"
                android:outlineAmbientShadowColor="@color/purple"
                android:outlineSpotShadowColor="@color/purple"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textSize="38sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EditName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/name"
                android:textColorHint="@color/blue"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputRegisterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EditEmailRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/blue"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EditPasswordRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/blue"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/blue"
                app:helperTextEnabled="false"
                app:hintTextColor="@color/blue"
                app:helperTextTextColor="@color/red"
                app:counterEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputRegisterPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/BtRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/purple"
                android:text="@string/register" />
        </LinearLayout>

    </ViewSwitcher>

</LinearLayout>